--- a/ITIGraduation/Views/TrendingSellings/Details.cshtml
+++ b/ITIGraduation/Views/TrendingSellings/Details.cshtml
@@ -115,7 +115,7 @@
                     title: 'Login Required',
                     text: 'Please log in first to add items to your cart.'
                 }).then(() => {
-                    window.location.href = response.url;
+                    window.location.href = "/Account/Index#log-sec";
                 });
                 return;
             }
