--- a/ITIGraduation/Views/TrendingSellings/Edit.cshtml
+++ b/ITIGraduation/Views/TrendingSellings/Edit.cshtml
@@ -7,7 +7,7 @@
 
     <h2>Edit Trending Product</h2>
 
-    <form asp-action="Edit">
+    <form asp-action="Edit" enctype="multipart/form-data">
         <input type="hidden" asp-for="ProudId" />
 
         <div class="form-group">
@@ -22,25 +22,63 @@
             <label asp-for="Price"></label>
             <input asp-for="Price" class="form-control" />
         </div>
+
+        <!-- صورة 1 -->
+        @if (!string.IsNullOrEmpty(Model.ImagUrl))
+        {
+            <div class="form-group">
+                <label>Current Image 1:</label><br />
+                <img src="@Model.ImagUrl" width="150" /><br />
+            </div>
+        }
         <div class="form-group">
-            <label asp-for="ImagUrl"></label>
-            <input asp-for="ImagUrl" class="form-control" />
+            <label>Upload New Image 1</label>
+            <input type="file" name="ImageFile1" class="form-control" />
         </div>
+
+        <!-- صورة 2 -->
+        @if (!string.IsNullOrEmpty(Model.Imag2))
+        {
+            <div class="form-group">
+                <label>Current Image 2:</label><br />
+                <img src="@Model.Imag2" width="150" /><br />
+            </div>
+        }
         <div class="form-group">
-            <label asp-for="Imag2"></label>
-            <input asp-for="Imag2" class="form-control" />
+            <label>Upload New Image 2</label>
+            <input type="file" name="ImageFile2" class="form-control" />
         </div>
+
+        <!-- صورة 3 -->
+        @if (!string.IsNullOrEmpty(Model.Imag3))
+        {
+            <div class="form-group">
+                <label>Current Image 3:</label><br />
+                <img src="@Model.Imag3" width="150" /><br />
+            </div>
+        }
         <div class="form-group">
-            <label asp-for="Imag3"></label>
-            <input asp-for="Imag3" class="form-control" />
+            <label>Upload New Image 3</label>
+            <input type="file" name="ImageFile3" class="form-control" />
         </div>
+
+        <!-- صورة 4 -->
+        @if (!string.IsNullOrEmpty(Model.Imag4))
+        {
+            <div class="form-group">
+                <label>Current Image 4:</label><br />
+                <img src="@Model.Imag4" width="150" /><br />
+            </div>
+        }
         <div class="form-group">
-            <label asp-for="Imag4"></label>
-            <input asp-for="Imag4" class="form-control" />
+            <label>Upload New Image 4</label>
+            <input type="file" name="ImageFile4" class="form-control" />
         </div>
+
         <button type="submit" class="btn btn-warning">Save Changes</button>
-        <a asp-action="Index" asp-fragment="ProductView" class="btn btn-secondary">Cancel</a>
+        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
     </form>
+    >
 
 
 </div>
