--- a/ITIGraduation/Views/Oxfords/Edit.cshtml
+++ b/ITIGraduation/Views/Oxfords/Edit.cshtml
@@ -2,10 +2,12 @@
 
 <div class="product_page" id="ProductView">
     <h2>Edit Oxford</h2>
-    <form asp-action="Edit">
+    <form asp-action="Edit" enctype="multipart/form-data">
         <input type="hidden" asp-for="OxfordId" />
+        <input type="hidden" asp-for="ImagUrl" /> <!-- عشان يحتفظ بالقيمة القديمة لو المستخدم ما رفعش صورة جديدة -->
+
         <div class="form-group">
-            <label asp-for="BootName"></label>
+            <label asp-for="BootName">Oxford Name</label>
             <input asp-for="BootName" class="form-control" />
         </div>
         <div class="form-group">
@@ -16,18 +18,24 @@
             <label asp-for="Price"></label>
             <input asp-for="Price" class="form-control" />
         </div>
+
         <div class="form-group">
-            <label asp-for="ImagUrl"></label>
-            <input asp-for="ImagUrl" class="form-control" />
+            <label>Current Image</label><br />
+            <img src="@Url.Content(Model.ImagUrl)" alt="Oxford Image" style="max-width:150px;max-height:150px;" />
         </div>
+
+        <div class="form-group">
+            <label>Upload New Image</label>
+            <input type="file" name="ImageFile" class="form-control" />
+        </div>
+
         <button type="submit" class="btn btn-warning">Save Changes</button>
         <a asp-action="Index" asp-fragment="ProductView" class="btn btn-secondary">Cancel</a>
     </form>
-    
 </div>
 
-
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
